test/parse/module/bad-memory-segment-address.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (memory 100)
  (data foo))
(;; STDERR ;;;
out/test/parse/module/bad-memory-segment-address.txt:5:4: error: passive data segments are not allowed
  (data foo))
   ^^^^
out/test/parse/module/bad-memory-segment-address.txt:5:9: error: unexpected token foo.
  (data foo))
        ^^^
;;; STDERR ;;)
